뷰 수정& css수정&기능 추가 및 수정

--- a/admin/views/main.ejs
+++ b/admin/views/main.ejs
@@ -35,7 +35,7 @@
                     <path d="M16 17H8" stroke="#9A9A9A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M10 9H9H8" stroke="#9A9A9A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
-                <a href="/admin/reservation_manage" class="menu_text">예약관리</a>
+                <a href="/admin/reservation_manage?reserv_status=예약대기" class="menu_text">예약관리</a>
               </div>
               <div class="menu_box">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -58,8 +58,9 @@
         <div class="menu_bar">
           <div class="main_page"><a href="/admin/main" class="menu_text focus">메인</a></div>
           <div class="client_list"><a href="/admin/client_list" class="menu_text">회원목록</a></div>
-          <div class="reserv_manage"><a href="/admin/reservation_manage" class="menu_text">예약관리</a></div>
+          <div class="reserv_manage"><a href="/admin/reservation_manage?reserv_status=예약대기" class="menu_text">예약관리</a></div>
           <div class="prog_manage"><a href="/admin/prog_manage" class="menu_text">프로그램관리</a></div>
+          <div class="sale_manage"><a href="/admin/sale_manage" class="menu_text focus">매출관리</a></div>
         </div>
         <div class="main_col">
           <div class="reserv_main">
