--- a/admin/views/client_list.ejs
+++ b/admin/views/client_list.ejs
@@ -70,7 +70,7 @@
           <div class="client_list"><a href="/admin/client_list" class="menu_text focus">회원목록</a></div>
           <div class="reserv_manage"><a href="/admin/reservation_manage?reserv_status=예약대기" class="menu_text">예약관리</a></div>
           <div class="prog_manage"><a href="/admin/prog_manage" class="menu_text">프로그램관리</a></div>
-          <div class="sale_manage"><a href="/admin/sale_manage" class="menu_text focus">매출관리</a></div>
+          <div class="sale_manage"><a href="/admin/sale_manage" class="menu_text">매출관리</a></div>
         </div>
         <div class="main">
           <div class="table_title">
