--- a/admin/views/reservation_manage.ejs
+++ b/admin/views/reservation_manage.ejs
@@ -70,13 +70,14 @@
           <div class="client_list"><a href="/admin/client_list" class="menu_text">회원목록</a></div>
           <div class="reserv_manage"><a href="/admin/reservation_manage?reserv_status=예약대기" class="menu_text focus">예약관리</a></div>
           <div class="prog_manage"><a href="/admin/prog_manage" class="menu_text">프로그램관리</a></div>
-          <div class="sale_manage"><a href="/admin/sale_manage" class="menu_text focus">매출관리</a></div>
+          <div class="sale_manage"><a href="/admin/sale_manage" class="menu_text">매출관리</a></div>
         </div>
         <div class="main">
           <div class="sale_search">
             <a href="/admin/reservation_manage?reserv_status=예약대기" class="top_btn <%= reserv_status === '예약대기' ? 'active' : '' %>">예약대기</a>
             <a href="/admin/reservation_manage?reserv_status=예약확정" class="top_btn <%= reserv_status === '예약확정' ? 'active' : '' %>">예약확정</a>
             <a href="/admin/reservation_manage?reserv_status=취소완료" class="top_btn <%= reserv_status === '취소완료' ? 'active' : '' %>">예약취소</a>
+            <a href="/admin/reservation_manage?reserv_status=결제완료" class="top_btn <%= reserv_status === '결제완료' ? 'active' : '' %>">결제완료</a>
           </div>
           <div class="table_title">
             <span class="table_title_text">예약관리</span>
