--- a/admin/views/sale_manage_search.ejs
+++ b/admin/views/sale_manage_search.ejs
@@ -57,7 +57,7 @@
         </div>
         <div class="menu_bar">
           <div class="main_page"><a href="/admin/main" class="menu_text">메인</a></div>
-          <div class="client_list"><a href="/admin/client_list" class="menu_text focus">회원목록</a></div>
+          <div class="client_list"><a href="/admin/client_list" class="menu_text">회원목록</a></div>
           <div class="reserv_manage"><a href="/admin/reservation_manage?reserv_status=예약대기" class="menu_text">예약관리</a></div>
           <div class="prog_manage"><a href="/admin/prog_manage" class="menu_text">프로그램관리</a></div>
           <div class="sale_manage"><a href="/admin/sale_manage" class="menu_text focus">매출관리</a></div>
